<package format="2">
    <name>conveyor_manipulation_planner</name>
    <version>0.0.0</version>
    <description>Implementation of an fcl + scdl collision checker</description>
    <author email="fi@andrew.cmu.edu">Fahad Islam</author>
    <maintainer email="fi@andrew.cmu.edu">Fahad Islam</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>smpl_urdf_robot_model</depend>
    <depend>sbpl_collision_checking</depend>
    <depend>sbpl_kdl_robot_model</depend>
    <depend>boost</depend>
    <depend>eigen</depend>
    <depend>eigen_conversions</depend>
    <depend>leatherman</depend>
    <depend>moveit_core</depend>
    <depend>moveit_msgs</depend>
    <depend>roscpp</depend>
    <depend>smpl</depend>
    <depend>trajectory_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>fcl</depend>
</package>
